# controller/controller.go
@@ -5,6 +5,7 @@ import (
 	"encoding/json"
 	"fmt"
 	"net/http"
+	"os/exec"
 
 	"github.com/gorilla/mux"
 	"gopkg.in/mgo.v2"
@@ -19,10 +20,65 @@ var InsDberror = false
 //AllDbErr is a variable used for checking database error while fetching all records
 var AllDbErr = false
 
+//CreateMovie create new record
+func CreateMovie(response http.ResponseWriter, request *http.Request) {
+	// swagger:operation POST /movie CreateMovie
+	// Add A mov to the database
+	// ---
+	// consumes:
+	// - application/json
+	// - application/xml
+	// produces:
+	// - application/json
+	// - application/xml
+	// parameters:
+	//   - name: movie
+	//     in: body
+	//     required: true
+	//     description: The movie to be created.
+	//     schema:
+	//       $ref: '#/definitions/Movie'
+	// responses:
+	//   '200':
+	//     description: Movie succesfully created.
+	if request.Header.Get("content-type") != "application/json" {
+		fmt.Printf("request type not matching")
+		return
+	}
+	response.Header().Set("content-type", "application/json")
+	response.Header().Set("Access-Control-Allow-Origin", "*")
+
+	session, _ := mgo.Dial("localhost:27017") //establish connection
+	defer session.Close()                     //close it in defer
+	c := session.DB("ashish").C("plaza")      //create new database and collection
+
+	var movie model.Movie
+	decodeErr := json.NewDecoder(request.Body).Decode(&movie)
+
+	if decodeErr != nil {
+		fmt.Print("JSON Decode problem create")
+		response.WriteHeader(http.StatusInternalServerError)
+		return
+	}
+
+	if movie.Name == "" || movie.Budget == 0 || movie.Director == "" || request.ContentLength == 0 {
+		fmt.Print("cannot send empty data")
+		response.WriteHeader(http.StatusBadRequest)
+		return
+	}
+
+	errIns := c.Insert(movie) //actual insert query
+	if errIns != nil || InsDberror {
+		response.WriteHeader(http.StatusInternalServerError)
+		return
+	}
+	response.WriteHeader(http.StatusOK)
+	json.NewEncoder(response).Encode(movie)
+}
 
 //GetMovieByID select one movie by user id
 func GetMovieByID(response http.ResponseWriter, request *http.Request) {
-	// swagger:operation GET /movie/{uid} GetMovie
+	// swagger:operation GET /movie/{uid} GetMovieByID
 	// Returns the movie from the database which user has requested
 	// ---
 	// produces:
@@ -32,7 +88,6 @@ func GetMovieByID(response http.ResponseWriter, request *http.Request) {
 	// - name: uid
 	//   in: path
 	//   required: true
-	//	 type: string
 	// responses:
 	//   '200':
 	//     description: movie response
@@ -103,62 +158,6 @@ func GetMovies(response http.ResponseWriter, request *http.Request) {
 	json.NewEncoder(response).Encode(arr)
 }
 
-//CreateMovie create new record
-func CreateMovie(response http.ResponseWriter, request *http.Request) {
-	// swagger:operation POST /movie CreateMovie
-	// Adds new movie to the database
-	// ---
-	// consumes:
-	// - application/json
-	// - application/xml
-	// produces:
-	// - application/json
-	// - application/xml
-	// parameters:
-	//   - name: movie
-	//     in: body
-	//     required: true
-	//     description: The movie to be created.
-	//     schema:
-	//       $ref: '#/definitions/Movie'
-	// responses:
-	//   '200':
-	//     description: Movie succesfully created.
-	if request.Header.Get("content-type") != "application/json" {
-		fmt.Printf("request type not matching")
-		return
-	}
-	response.Header().Set("content-type", "application/json")
-	response.Header().Set("Access-Control-Allow-Origin", "*")
-
-	session, _ := mgo.Dial("localhost:27017") //establish connection
-	defer session.Close()                     //close it in defer
-	c := session.DB("ashish").C("plaza")      //create new database and collection
-
-	var movie model.Movie
-	decodeErr := json.NewDecoder(request.Body).Decode(&movie)
-
-	if decodeErr != nil {
-		fmt.Print("JSON Decode problem create")
-		response.WriteHeader(http.StatusInternalServerError)
-		return
-	}
-
-	if movie.Name == "" || movie.Budget == 0 || movie.Director == "" || request.ContentLength == 0 {
-		fmt.Print("cannot send empty data")
-		response.WriteHeader(http.StatusBadRequest)
-		return
-	}
-
-	errIns := c.Insert(movie) //actual insert query
-	if errIns != nil || InsDberror {
-		response.WriteHeader(http.StatusInternalServerError)
-		return
-	}
-	response.WriteHeader(http.StatusOK)
-	json.NewEncoder(response).Encode(movie)
-}
-
 //UpdateMovie update one movie by name
 func UpdateMovie(response http.ResponseWriter, request *http.Request) {
 	// swagger:operation PUT /movie/{uid} UpdateMovie
@@ -171,7 +170,7 @@ func UpdateMovie(response http.ResponseWriter, request *http.Request) {
 	// - application/json
 	// - application/xml
 	// parameters:
-	// - name: name
+	// - name: uid
 	//   in: path
 	//   required: true
 	//   type: string
@@ -228,7 +227,7 @@ func UpdateMoviePatch(response http.ResponseWriter, request *http.Request) {
 	// - application/json
 	// - application/xml
 	// parameters:
-	// - name: name
+	// - name: uid
 	//   in: path
 	//   required: true
 	//   type: string
@@ -258,7 +257,7 @@ func UpdateMoviePatch(response http.ResponseWriter, request *http.Request) {
 	what := bson.M{"uid": params["uid"]}
 	change := bson.M{
 		"$set": bson.M{
-			"name":		movie.Name,
+			"name":     movie.Name,
 			"budget":   movie.Budget,
 			"director": movie.Director},
 	}
@@ -285,7 +284,7 @@ func DeleteMovie(response http.ResponseWriter, request *http.Request) {
 	// - application/json
 	// - application/xml
 	// parameters:
-	// - name: name
+	// - name: uid
 	//   in: path
 	//   required: true
 	//   type: string
@@ -311,14 +310,34 @@ func DeleteMovie(response http.ResponseWriter, request *http.Request) {
 	response.WriteHeader(http.StatusOK)
 }
 
+func generateSwagger() http.Handler {
+	cmd := exec.Command("swagger", "generate", "spec", "-o", "swaggerui/swagger.json", "--scan-models")
+	//swagger generate spec -o swaggerui/swagger.json --scan-models
+	cmd.Run()
+	// if err != nil {
+	// 	log.Fatalf("cmd.Run() failed with %s\n", err)
+	// }
+	swgr := http.StripPrefix("/swaggerui/", http.FileServer(http.Dir("./swaggerui/")))
+	return swgr
+	// return nil
+}
+func swaggerHome(response http.ResponseWriter, request *http.Request) {
+	http.Redirect(response, request, "http://localhost:12345/swaggerui/", http.StatusFound)
+}
+
 //UserRouter all the router related functionalities
 func UserRouter() *mux.Router {
+	generateSwagger()
 	router := mux.NewRouter()
+	router.HandleFunc("/", swaggerHome)
 	router.HandleFunc("/movies", GetMovies).Methods("GET")
 	router.HandleFunc("/movie", CreateMovie).Methods("POST")
 	router.HandleFunc("/movie/{uid}", GetMovieByID).Methods("GET")
 	router.HandleFunc("/movie/{uid}", UpdateMovie).Methods("PUT")
 	router.HandleFunc("/movie/{uid}", UpdateMoviePatch).Methods("PATCH")
 	router.HandleFunc("/movie/{uid}", DeleteMovie).Methods("DELETE")
+
+	router.PathPrefix("/swaggerui/").Handler(generateSwagger())
+
 	return router
 }
